# rust-actix-todo-api

./: .env-example  Cargo.toml  Dockerfile  README.md  database.sql  docker-compose.yaml
migrations/2020-07-29-042351_create_table/: up.sql
src/: db.rs  errors.rs  handlers.rs  integration_tests.rs  main.rs  models.rs
